k8s/deploymentFlask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      imagePullSecrets:
        - name: regcred

      containers:
      - name: flask
        image: ghcr.io/diagnec/flask-devops-project:latest
        ports:
        - containerPort: 5000
