k8s/deploymentPostgreSQL.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres  
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers: 
      - name: postgres 
        image: postgres:13
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 5432

        volumeMounts:
        - mountPath: /var/lib/postgresql/data 
          name: postgres-storage 

        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 15
          periodSeconds: 20

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"

      volumes:
      - name: postgres-storage 
        persistentVolumeClaim:
          claimName: postgre-pvc
