k8s/servicePostgreSql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres 
spec: 
  selector:
    app: postgres 
  ports:
    - port: 5432
      targetPort: 5432
