k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask   # <-- changer postgres → flask si pas de frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: flask
            port:
              number: 80
